Small markdown update to lab1

--- a/Lab 1 - Project Setup.ipynb
+++ b/Lab 1 - Project Setup.ipynb
@@ -6,12 +6,7 @@
    "source": [
     "# Lab 1: Environment Setup and Testing\n",
     "\n",
-    "This introductory lab guides the attendees with the following activities:\n",
-    "\n",
-    "1. Setting up your AI Foundry resource and project in Azure AI Foundry\n",
-    "2. Deploying an LLM and embedding models\n",
-    "3. Establishing connectivity from VS Code to your AI Project\n",
-    "4. Perform a simple chat completion call to to test your model"
+    "This lab provides a hands-on introduction to building with Azure AI Foundry. Here you will set up your Azure AI environment, deploy essential language and embedding models, create necessary services, and configure connectivity to your AI project. At the end of this lab, you’ll validate your setup by sending a test chat completion to your deployed model, ensuring your environment is ready for advanced AI agent development in subsequent labs."
    ]
   },
   {
