Another small markdown update to lab1

--- a/Lab 1 - Project Setup.ipynb
+++ b/Lab 1 - Project Setup.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Lab 1: Environment Setup and Testing\n",
     "\n",
-    "This lab provides a hands-on introduction to building with Azure AI Foundry. Here you will set up your Azure AI environment, deploy essential language and embedding models, create necessary services, and configure connectivity to your AI project. At the end of this lab, you’ll validate your setup by sending a test chat completion to your deployed model, ensuring your environment is ready for advanced AI agent development in subsequent labs."
+    "This lab provides a hands-on introduction to building AI agents with Azure AI Foundry. Here you will set up your Azure AI environment, deploy essential language and embedding models, create necessary services, and configure connectivity to your AI project. At the end of this lab, you’ll validate your setup by sending a test chat completion to your deployed model, ensuring your environment is ready for advanced AI agent development in subsequent labs."
    ]
   },
   {
