Update step 4 typo in Lab 1

--- a/Lab 1 - Project Setup.ipynb
+++ b/Lab 1 - Project Setup.ipynb
@@ -96,12 +96,11 @@
     "\n",
     "The import and vectorize wizard in Azure AI Search, which will be used in subsequent labs, does not yet support text embedding models within your AI Foundry resource project. Because of this, we need to create an Azure OpenAI service and deploy a text embedding model there. We will use this text embedding model later to vectorize our health plan documents.\n",
     "\n",
-    "1. Navigate to the same resource group where you created your AI project and create a new Azure AI Search service resource.\n",
-    "2. Deploy an Azure OpenAI Service resource in this resource group.\n",
-    "3. In your newly created Azure OpenAI service, click Go to Azure AI Foundry portal. Notice that this is outside of your project.\n",
-    "4. Under the My assets section, click on the Models + endpoints.\n",
-    "5. Click on Deploy model and then Deploy base model.\n",
-    "6. Select text-embedding-3-large and deploy it. This will be used later to create the vector embeddings for our health plan documents."
+    "1. Navigate to the same resource group where you created your AI project and create a new Azure OpenAI service resource.\n",
+    "2. In your newly created Azure OpenAI service, click Go to Azure AI Foundry portal. Notice that this is outside of your project.\n",
+    "3. Under the My assets section, click on the Models + endpoints.\n",
+    "4. Click on Deploy model and then Deploy base model.\n",
+    "5. Select text-embedding-3-large and deploy it. This will be used later to create the vector embeddings for our health plan documents."
    ]
   },
   {
