Several updates to lab instructions and minor code changes

--- a/Lab 1 - Project Setup.ipynb
+++ b/Lab 1 - Project Setup.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Lab 1: Environment Setup and Testing\n",
     "\n",
-    "This lab provides a hands-on introduction to building AI agents with Azure AI Foundry. Here you will set up your Azure AI environment, deploy essential language and embedding models, create necessary services, and configure connectivity to your AI project. At the end of this lab, you’ll validate your setup by sending a test chat completion to your deployed model, ensuring your environment is ready for advanced AI agent development in subsequent labs."
+    "This lab provides a hands-on introduction to building AI agents with Azure AI Foundry. Here you will set up your Azure AI environment, deploy essential language and embedding models, create necessary services, and configure connectivity to your AI project. At the end of this lab, you’ll validate your setup by sending a test chat completion to your deployed model, ensuring your environment is ready for advanced AI agent development in subsequent labs.\n",
+    "\n",
+    "NOTE: Be sure you have the necessary pre-requisites setup, as outlined in the [Project README](README.md) document, before proceeding to step 1."
    ]
   },
   {
@@ -78,14 +80,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 3: Create model deployments in your AI project\n",
+    "#### Step 3: Create a chat model deployment in your AI project\n",
+    "\n",
+    "If you are working in a project team with 2 or more members, only one person needs to perform the below steps. Once deployed, this model will be available to everyone in the project to use. For learning purposes, you can screenshare this part of the setup to your project team.\n",
     "\n",
     "1. In your AI Foundry project, under 'My assets' section, click on the 'Models + endpoints'.\n",
     "2. Click on 'Deploy model' and 'Deploy base model'.\n",
-    "3. Select gpt-4o and then press **Confirm**.\n",
+    "3. Select gpt-4o* and then press **Confirm**.\n",
     "4. Select **Customize** and set the **Model version** to 2024-08-06 and the **Tokens per Minute Rate Limit** to 200k.\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "*If you experience quota issues during deployment, you can opt to use Gpt-4.1 instead.\n",
+    "\n",
+    "![image.png](attachment:image.png)\n",
+    "\n"
    ]
   },
   {
@@ -107,9 +114,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 5: Create a Storage Container\n",
+    "#### Step 5: Create a Storage Account\n",
     "\n",
-    "We need to create a storage container to store our health plan documents in. This is where our Azure AI Search service will retrieve our health plan documents from. Navigate to the same resource group where you created your AI project and create a new Azure AI Search service resource.\n",
+    "We need to create a storage account and within it, storage container, which will store our health plan documents. This is where our Azure AI Search service will retrieve our health plan documents from. Navigate to the same resource group where you created your AI project and create a new Storage Account resource. The storage container will be created during Lab 4.\n",
     "\n",
     "![Sample Photo](images/create-SA.jpg)"
    ]
@@ -127,32 +134,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 7: Assign necessary permissions\n",
+    "#### Step 7: Required permissions for labs\n",
     "\n",
-    "The following steps are needed for the AI search resource to be able to vectorize the health plan documents in Lab 4:\n",
     "\n",
-    "1. Navigate to the Storage Account you created. On the left pane, under **Access control**, assign the 'Storage Blob Data Reader role' to the search service identity:\n",
+    "##### Managed-identity permissions:\n",
+    "\n",
+    "The next steps are needed for the AI search resource to be able to vectorize the health plan documents in Lab 4:\n",
+    "\n",
+    "4. Navigate to the **Storage Account** that was created above. **Assign the 'Storage Blob Data Reader role' to the search service identity**, as shown here:\n",
     "\n",
     "![Sample Photo](images/blob-roleassign.jpg)\n",
     "\n",
-    "2. Navigate to your Azure AI Search resource. On the left pane, under **Access control**, assign the 'Search Index Data Reader' and 'Search Service Contributor' roles to your project's managed identity:\n",
+    "\n",
+    "6. Navigate to your **Azure AI Search resource** that was created above. **Assign two roles to your project's managed identity: the 'Search Index Data Reader' role and the 'Search Service Contributor' role**, as shown below.\n",
     "\n",
     "![Sample Photo](images/aisearch-role-assign1.jpg)\n",
     "\n",
     "![Sample Photo](images/aisearch-role-assign2.jpg)\n",
     "\n",
-    "3. Navigate to your Azure OpenAI resource.\n",
-    "    1. Select **Access control**.\n",
+    "3. Navigate to your **Azure OpenAI resource** that was created above. **Assign the 'Cognitive Services OpenAI User' role to the search service identity**. To do this, select Access control > Add+ Role assignment > select Cognitive Services OpenAI User role > next select the managed identity of your search service > create role assignment.\n",
     "\n",
-    "    2. Select **Add**, and then select **Add role assignment**.\n",
+    "##### User permissions:\n",
     "\n",
-    "    3. Under **Job function roles**, select Cognitive Services OpenAI User, and then select **Next**.\n",
+    "**If you are the OWNER of your resource group and created the above services yourself, you inherit these user permissions and DO NOT need to add the below role assignments**, you can proceed to the next step. Otherwise, if you are a user, check to ensure the below role assignments are added for you.\n",
     "\n",
-    "    4. Under **Members**, select Managed identity, and then select Members.\n",
+    "TIP: if you are working on project teams and need to assign permissions to multiple users, you can add these permissions faster by creating a Entra ID security group (so you do not have to add users one-by-one) and by running Azure CLI scripts in Azure Cloud Shell.\n",
     "\n",
-    "    5. Filter by subscription and resource type (search services), and then select the managed identity of your search service.\n",
+    "1. At a minimum, users running these labs should have a **Reader role assigned on the Azure Subscription level**. In the Azure Portal, navigate to the Azure Subscription in which your resource group lives. On the left pane, select Access control > Role assignments. Filter 'Scope' to 'This resource'. Review user account permissions. If this is not asssigned, add this role assignment to the user.\n",
     "\n",
-    "    6. Select Review + assign.\n"
+    "2. **Each user needs to be granted the 'Cognitive Services OpenAI Contributor' role on the Azure AI Foundry resource**. To do this, in the Azure Portal, navigate to the Azure AI Foundry resource, select Access control > Add+ Role assignment > select Cognitive Services OpenAI Contributor role > next select the user(s) > create role assignment.\n",
+    "\n",
+    "3. **Each user needs to be granted the 'Azure AI Project Manager' role on the Azure AI Foundry resource**. To do this, in the Azure Portal, navigate to the Azure AI Foundry resource, select Access control > Add+ Role assignment > select Azure AI Project Manager role > next select the user(s) > create role assignment. \n",
+    "\n",
+    "4. **Each user needs to be granted the 'Azure AI Project Manager' role in their resprective Azure AI Foundry project**. To do this, in the Azure Portal, navigate to the appropriate Foundry project, select Access control > Add+ Role assignment > select Azure AI Project Manager role > next select the user(s) > create role assignment. Repeat this process, as necessary, for all of the Foundry projects within your Foundry Resource.\n",
+    "\n",
+    "5. **Each user needs to be granted the 'Storage Blob Data Contributor' role on the Storage Account**. To do this, add another role assignment > select Storage Blob Data Contributor role > next select the user(s) > create role assignment.\n",
+    "\n",
+    "6. **Each user needs to be granted the 'Search Service Contributor' role on the Azure AI Search resource**. To do this, add another role assignment > select Search Service Contributor role > next select the user(s) > create role assignment."
    ]
   },
   {
@@ -170,22 +188,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 5: Install dependencies, create a virtual environment, and create an environment variables file\n",
+    "#### Step 8: Install dependencies, create a virtual environment, and create an environment variables file\n",
     "\n",
-    "1. Open a new terminal and navigate to the AZURE-AI-AGENTS-LABS project directory if you are not there already, which you cloned from GitHub. Run the below powershell commands to create and activate your virtual environment:\n",
+    "1. Open a new terminal and navigate to the AZURE-AI-AGENTS-LABS project directory if you are not there already. Run the below commands to create and activate your virtual environment:\n",
     "    \n",
-    "    ```powershell\n",
-    "    python -m venv venv\n",
-    "    venv/Scripts/activate\n",
-    "2. Still in the AZURE-AI-AGENTS-LABS project directory, run the below powershell command. This installs all the required packages:\n",
+    "    In powershell terminal (Windows):\n",
     "    \n",
-    "    ```powershell\n",
-    "    pip install -r requirements.txt\n",
-    "3. Still in the AZURE-AI-AGENTS-LABS project directory, run the below powershell command. This creates your .env file:\n",
+    "        python -m venv venv\n",
+    "        venv/Scripts/activate\n",
     "    \n",
-    "    ```powershell\n",
-    "    cp sample.env .env\n",
-    "4. Update your newly created .env file with your environment variables\n",
+    "    In zsh terminal (Mac):\n",
+    "    \n",
+    "        python -m venv venv\n",
+    "        source venv/bin/activate    \n",
+    "    \n",
+    "2. Still in the AZURE-AI-AGENTS-LABS project directory, run the below command in your terminal. This installs all the required packages:\n",
+    "    \n",
+    "        pip install -r requirements.txt\n",
+    "\n",
+    "    NOTE: if there are any additional package dependecies that require installation, VS Code will prompt you to install these. If asked, go ahead and install.\n",
+    "\n",
+    "3. Still in the AZURE-AI-AGENTS-LABS project directory, run the below command in your terminal. This creates your .env file:\n",
+    "    \n",
+    "        cp sample.env .env\n",
+    "\n",
+    "4. Locate your newly created .env file and upate it with your environment variables:\n",
     "    1. Replace 'AIPROJECT_ENDPOINT' in your .env with your Azure AI Foundry project endpoint and 'API_KEY' with your API key, both of which can found in the the **Overview** page of your project:\n",
     "    \n",
     "    ![image-3.png](attachment:image-3.png)\n",
@@ -204,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 7: Login to your Azure subscription\n",
+    "### Step 9: Login to your Azure subscription\n",
     "\n",
     "In your terminal, run the below command to login to your Azure account. When prompted, select your subscription. This allows us to use the token-based authentication method, DefaultAzureCredential, which is required for subsequent labs. Key-based authentication, using the AzureKeyCredential method, may also work, but the code in the labs will need to be refactored accordingly.\n",
     "\n",
@@ -215,14 +242,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 8: Test your lab environment\n",
+    "#### Step 10: Test your lab environment\n",
     "\n",
     "To test that your lab was setup successfully, run the below code that sends a message to the deployed model, asking it to tell a joke."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +258,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
