--- a/Lab 5 - Develop A Mult-Agent System.ipynb
+++ b/Lab 5 - Develop A Mult-Agent System.ipynb
@@ -98,7 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First enter the name of your search index\n",
+    "\n",
+    "index_name=\"<my-index-name>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +128,7 @@
     "    index_list=[\n",
     "        AISearchIndexResource(\n",
     "            index_connection_id=conn_id,\n",
-    "            index_name=\"healthplan-index\" # Replace with your actual index name, if different\n",
+    "            index_name=index_name # Be sure to set your index name above\n",
     "        )\n",
     "    ]\n",
     ")\n",
