--- a/Lab 4 - Create A RAG Agent.ipynb
+++ b/Lab 4 - Create A RAG Agent.ipynb
@@ -15,6 +15,8 @@
    "source": [
     "#### Part 1: Connect to you Azure AI Search service\n",
     "\n",
+    "NOTE: If you are working in a project team with 2 or more members, only one person needs to perform Part 1. Once configured, the AI Search connection will be available to everyone in the project to use. For learning purposes, you can screenshare this part of the setup to your project team.\n",
+    "\n",
     "Navigate to your Azure AI Foundry project > Management Center > Select 'connected resources' under your project and add your Azure AI Search service using 'Entra ID' authetication.\n",
     "\n",
     "![Sample Photo](images/project-connected-res.jpg)\n",
@@ -39,13 +41,13 @@
     "We'll start the lab by creating an Azure AI Search index in our search service, which will contain vectorized representations of our health insurance plan documents. The steps shown below to create the AI Search index are from the official Microsoft [documentation](https://learn.microsoft.com/en-us/azure/search/search-get-started-portal-import-vectors?tabs=sample-data-storage%2Cmodel-aoai%2Cconnect-data-storage)\n",
     "\n",
     "#### Step 1\n",
-    "Inspect the documents in the 'data' folder, which are sourced from [here](https://github.com/luckypamula/azure-ai-agents-labs/tree/main/data). These will be stored in our Azure AI Search index.\n",
+    "Inspect the documents in the 'data-labs4to5' folder, which are sourced from [here](https://github.com/luckypamula/azure-ai-agents-labs/tree/main/data). These will be stored in our Azure AI Search index.\n",
     "\n",
     "#### Step 2\n",
     "Next, we'll upload the health plan documents to Azure Blob Storage, which Azure AI search connects to.\n",
-    "1. Navigate to the Storage Account you created. \n",
+    "1. Navigate to the Storage Account setup in Lab 1. \n",
     "2. Expand \"Data Storage\" in the side menu and click on \"Containers\". \n",
-    "3. Create a new container named \"healthplan\"\n",
+    "3. Create a new container named: [your-initials] + \"healthplan\" (Example: 'efwhealthplan'). If you are working in a project team, everyone will be working in the same Storage Account, so we want to make sure our Blob Storage Container names are unique!\n",
     "\n",
     "    ![image.png](attachment:image.png)\n",
     "4. Click into the new container and upload the two documents in the 'data' folder.\n",
@@ -53,18 +55,18 @@
     "    ![image-3.png](attachment:image-3.png)\n",
     "\n",
     "#### Step 3\n",
-    "We need an embedding model in order to convert our documents into vectors that will be stored in Azure AI Search...luckily, we've already deployed a text-embedding-3-large model during the setup in Lab 1!\n",
+    "We need an embedding model in order to convert our documents into vectors that will be stored in Azure AI Search...luckily, we've already deployed a text-embedding-3-large model in our Azure OpenAI service during the setup in Lab 1!\n",
     "\n",
     "#### Step 4\n",
     "Now we're ready to vectorize our documents.\n",
-    "1. Go to your Azure AI Search Service where your text-embedding-3-large model is deployed\n",
+    "1. Go to your Azure AI Search Service\n",
     "2. On the **Overview page**, select **Import and vectorize data**.\n",
     "3. Select **Azure Blob Storage** as your data source.\n",
-    "4. On the next page, select 'RAG'.\n",
+    "4. On the next page, select **RAG**.\n",
     "5. On the next page **configure your Azure blob storage** by specifying your subscription, storage account, and the container that contains your healthplan documents \n",
     "6. Make sure **Authenticate using managed idenity is checked** and the **Managed identity type** is set to **System-assigned**.\n",
     "\n",
-    "    ![Sample Photo](images/aisearch-blobconnect.jpg)\n",
+    "    ![Sample Photo](images/search-blobconnect.jpg)\n",
     "\n",
     "5. On the **Vectorize your text** page, select **Azure OpenAI** for **Kind**, select your subscription, and select the name of your Azure OpenAI Service.\n",
     "6. For the **Model deployment** select `text-embedding-3-large`. \n",
@@ -73,8 +75,9 @@
     "\n",
     "    ![Sample Photo](images/vectorize-model.jpg)\n",
     "\n",
-    "9. You can hit **Next** for the next two pages. When you get to the **Review and create** page, set **Objects name prefix** to **healthplan-index**. IMPORTANT: if you choose a different name for your index, be sure to update the code cells below with the correct name!\n",
-    "10. Click **Create**. This will start the document indexing process which will vectorize your documents and create an index. NOTE: it may take a few minutes for you index to fully populate with your document chunks. Wait until the process is complete before continuing to part 2.\n"
+    "9. You can hit **Next** for the next two pages. When you get to the **Review and create** page, set **Objects name prefix** to **[your-blob-container-name]-index** (Example: 'efwhealthplan-index'). Click **Create**. This will start the document indexing process which will vectorize your documents and create an index. NOTE: it may take a few minutes for you index to fully populate with your document chunks. Wait until the process is complete BEFORE continuing to part 2.\n",
+    "\n",
+    "    ![Sample Photo](images/index-name.jpg)"
    ]
   },
   {
@@ -148,7 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First enter the name of your search index\n",
+    "\n",
+    "index_name=\"<my-index-name>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +182,7 @@
     "    index_list=[\n",
     "        AISearchIndexResource(\n",
     "            index_connection_id=conn_id,\n",
-    "            index_name=\"healthplan-index\"\n",
+    "            index_name=index_name # Be sure to set your index name above\n",
     "        )\n",
     "    ]\n",
     ")\n",
